--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Welcome
-subtitle: Computational Neuroscientist/Vision Researcher
+title: Hi, I'm Brian.
+subtitle: PhD Candidate/Computational Neuroscientist/Vision Researcher
 ---
 
 <div class="posts-list">
