test new subtitle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Hi, I'm Brian.
-subtitle: PhD Candidate/Computational Neuroscientist/Vision Researcher
+title: 'Hi, I''m Brian.'
+subtitle: PhD Student/Computational Neuroscientist/Vision Researcher
+published: true
 ---
 
 <div class="posts-list">
