--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ published: true
 	-->
 	{{ post.excerpt | split:'<!--break-->' | first }}
 	{% assign excerpt_word_count = post.excerpt | number_of_words %}
-   	{% if post.content contains '<!--break-->' or excerpt_word_count > site.excerpt_length %}
+   	{% if post.content contains '<!--break-->' %}
 	<!--
         {% if post.content != post.excerpt or excerpt_word_count > site.excerpt_length %}
 	-->
