--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 'Hi, I''m Brian.'
+title: 'Danny Jeck's website'
 subtitle: PhD Student/Computational Neuroscientist/Vision Researcher
 published: true
 ---
