--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 'Danny Jeck's website'
-subtitle: PhD Student/Computational Neuroscientist/Vision Researcher
+subtitle: PhD Student/Computational Neuroscientist/Engineer
 published: true
 ---
 
